--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hangman Game</title>
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <div>
@@ -15,11 +16,13 @@
       <input id='guessText' type="text" name='guessText' maxlength="1" autofocus autocomplete="off"/>
       <button type='submit' id="guessBtn">your guess!</button>
     </form>
-    <div id='statusContainer'>
-      <h2 id ='status'></h2>
+    <div id='statusContainer' class='result'>
+      <h2 id='status'></h2>
+      <p id='answer' ></p>
+      <button id='nextBtn'>next game</button>
+      <span> set chances amount <span id='count'></span><span>+</span><span>-</span></span>
     </div>
     
-
     <script src="hangman.js"></script>
     <script src="requests.js"></script>
     <script src="app.js"></script>
