--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             autofocus
             autocomplete="off"
           />
-          <button type="submit" id="guessBtn">your guess!</button>
+          <button type="submit" id="guessBtn" >your guess!</button>
         </form>
       </div>
       <div id="modal-container" class="modal-container">
@@ -67,6 +67,9 @@
       </div>
     </div>
 
+    <!-- <iframe id='opening' allow='autoplay' style='display:none'></iframe> -->
+    <audio id='opening' src=""></audio>
+    <audio id='audio' src=''></audio>
     <script src="hangman.js"></script>
     <script src="requests.js"></script>
     <script src="app.js"></script>
