refactored and separated it into modules

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hangman Game</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="icon" href="./img/hangman-favi.png" type="image/x-icon" />
   </head>
   <body>
     <div class="game-container">
@@ -29,12 +30,11 @@
             <line x1="140" y1="150" x2="130" y2="180" class="figure-part" />
             <line x1="140" y1="150" x2="150" y2="180" class="figure-part" />
           </svg>
+
           <div class="wrong-letters-container">
             <div id="wrong-letters">
               <p class="wrong-title">wrong</p>
-              <!-- <span>| &nbsp;</span> -->
               <span id="wrong-letter"></span>
-              <!-- <span> &nbsp; |</span> -->
             </div>
             <div class="reamining-guesses-container">
               <p id="remainingGuesses" class="remainingGuess"></p>
@@ -47,51 +47,13 @@
           <div id="puzzle" class="puzzle">
             <span></span>
           </div>
-          <!-- <div>
-            <p id="remainingGuesses" class="remainingGuess"></p>
-            <p id="message" class="message"></p>
-          </div> -->
         </div>
-        <!-- <form id="submitGuess" class="form">
-          <input
-            id="guessText"
-            type="text"
-            name="guessText"
-            maxlength="1"
-            autofocus
-            autocomplete="off"
-          />
-          <button type="submit" id="guessBtn">your guess!</button>
-        </form> -->
 
         <div id="keyboard" class="keyboard">
           <div id="first-quarter" class="first-quarter"></div>
-          <div id="second-quarter" class="second-quarter">
-            <button class="key" name="h">h</button>
-            <button class="key" name="i">i</button>
-            <button name="j">j</button>
-            <button name="k">k</button>
-            <button name="l">l</button>
-            <button name="m">m</button>
-            <button name="n">n</button>
-          </div>
-          <div id="third-quarter" class="third-quarter">
-            <button>o</button>
-            <button>p</button>
-            <button>q</button>
-            <button>r</button>
-            <button>s</button>
-            <button>t</button>
-            <button>u</button>
-          </div>
-
-          <div id="forth-quarter" class="forth-quarter">
-            <button>v</button>
-            <button>w</button>
-            <button>x</button>
-            <button>y</button>
-            <button>z</button>
-          </div>
+          <div id="second-quarter" class="second-quarter"></div>
+          <div id="third-quarter" class="third-quarter"></div>
+          <div id="forth-quarter" class="forth-quarter"></div>
         </div>
       </div>
 
@@ -104,11 +66,7 @@
       </div>
     </div>
 
-    <!-- <iframe id='opening' allow='autoplay' style='display:none'></iframe> -->
-    <audio id="opening" src=""></audio>
     <audio id="audio" src=""></audio>
-    <script src="hangman.js"></script>
-    <script src="requests.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
