--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game-container">
       <div class="container">
         <h1>Hangman Game</h1>
-        <h4 class="subtitle">Find the hidden word</h4>
+        <h4 class="subtitle">guess the word</h4>
         <div class="game-status-container">
           <svg height="250" width="200" class="figure-container">
             <!--stand-->
